samples/iptables-save.txt
# Generated by iptables-save v1.8.9 on Mon May 18 12:00:00 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER-USER - [0:0]
:WEB - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m limit --limit 10/sec -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m comment --comment "ssh" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j WEB
-A INPUT -p tcp -m tcp --dport 443 -j WEB
-A INPUT -s 192.168.1.0/24 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "DROP-INPUT: "
-A INPUT -j DROP
-A FORWARD -j DOCKER-USER
-A DOCKER-USER -j RETURN
-A WEB -m conntrack --ctstate NEW -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -p tcp -m tcp --dport 8080 -m comment --comment "proxmox web ui" -j REDIRECT --to-ports 8006
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2222 -j DNAT --to-destination 192.168.1.50:22
-A POSTROUTING -s 172.17.0.0/16 -o eth0 -j MASQUERADE
COMMIT
